# cross-wgpu-example

./: .gitignore  .gitmodules  Cargo.toml  README.md  buildweb.sh  buildwebrelease.sh  index.html  mobile.toml  test.html
src/: camera.rs  chunk.rs  gui.rs  lib copy.rs  lib.rs  model.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs
