[package]
name = "vox23"
version = "0.1.0"
authors = ["RS <rs@neb.best>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vox2-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
winit = "0.26.0"
wgpu = {git = "https://github.com/gfx-rs/wgpu"}

log = "0.4.11"
pollster = "0.2.5"
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "1.11.0"
