[package]
name = "vox23"
version = "0.1.0"
authors = ["RS <rs@neb.best>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vox2-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
winit = "0.26.0"
wgpu = "0.12.0"
# wgpu = {path = "./wgpu/wgpu"}
log = "0.4.11"
# pollster = "0.2.5"
futures = "0.3.21"
cfg-if = "1"
wgpu_glyph = "0.16.0"
image = "0.24.1"
instant = "0.1.12"
# wgpu_glyph = {path="./wgpu_glyph"}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "1.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = {version="0.12.0", features=["webgl"]}

# wgpu = { features = ["webgl"]}
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
 